--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,4 +2,44 @@
 
 * {
     font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    margin: 0px;
+    padding: 0px;
+}
+
+.container {
+    padding: 10px;
+}
+
+.marginTop-1 {
+    margin-top: 1rem;
+}
+
+.marginTop-2 {
+    margin-top: 2rem;
+}
+
+.marginTop-3 {
+    margin-top: 3rem;
+}
+
+.marginBottom-1 {
+    margin-bottom: 1rem;
+}
+
+.marginBottom-2 {
+    margin-bottom: 2rem;
+}
+
+.marginBottom-3 {
+    margin-bottom: 3rem;
+}
+
+
+.flex {
+    display: flex;
+} 
+
+.space-between {
+    justify-content: space-between;
 }
