--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import "variables.scss";
+
 * {
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
     margin: 0px;
     padding: 0px;
+    font-weight: 500;
 }
 
 .container {
@@ -40,6 +43,72 @@
     display: flex;
 } 
 
+.flexColumn {
+    display: flex;
+    flex-direction: column;
+}
+
+.alignCenter {
+    align-items: center;
+}
+
 .space-between {
     justify-content: space-between;
+}
+
+.text-center {
+    text-align: center;
+}
+
+h1, h2, h3 {
+    font-weight: 700;
+}
+
+h1 {
+    font-size: 2.5rem;
+}
+
+h2 {
+    font-size: 1.5rem;
+}
+
+h3 {
+    font-size: 1.3rem;
+}
+
+p {
+    color: $grayishViolet;
+}
+
+.btn-secondary {
+    border: none;
+    background-color: $cyan;
+    color: $white;
+    font-weight: 700;
+    padding: 15px 30px;
+    border-radius: 30px;
+}
+
+.card {
+    width: 80%;
+    background-color: white;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    border-radius: 10px;
+    padding: 1rem;
+    text-align: center;
+}
+
+.iconInsideCircle {
+    border-radius: 50%;
+    background: $darkviolet;
+    width: 50px;
+    position: absolute;
+    left: 150px;
+    margin-top: -30px;
+}
+
+.iconInsideCircle img {
+    width: 25px;
+    height: 25px;
 }
