--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,3 +1,5 @@
+@import 'variables.scss';
+
 header {
     padding: 20px;
     display: flex;
@@ -7,4 +9,22 @@ header {
 header .menuBtn img {
     height: 30px;
     cursor: pointer;
+}
+
+.mobileViewHeader {
+    display: block;
+    background-color: $darkviolet;
+    position: absolute;
+    top: 80px;
+    width: 80%;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.mobileViewHeader li {
+    list-style-type: none;
+    color: $white;
+    margin: 30px 0px;
+    font-weight: 700;;
 }
