--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,18 @@
     font-weight: 500;
 }
 
+.full-width {
+    width: 100%;
+}
+
+.showMenu {
+    display: block;
+}
+
+.menu {
+    display: none;
+}
+
 .container {
     padding: 10px;
 }
@@ -36,6 +48,22 @@
 
 .marginBottom-3 {
     margin-bottom: 3rem;
+}
+
+.marginBottom-6 {
+    margin-bottom: 6rem;
+}
+
+.marginBottom-7 {
+    margin-bottom: 7rem;
+}
+
+.paddingTop-6 {
+    padding-top: 6rem;
+}
+
+.paddingTop-12 {
+    padding-top: 12rem;
 }
 
 
