--- a/src/styles.scss
+++ b/src/styles.scss
@@ -62,6 +62,10 @@
     padding-top: 6rem;
 }
 
+.paddingTop-9 {
+    padding-top: 9rem;
+}
+
 .paddingTop-12 {
     padding-top: 12rem;
 }
@@ -88,7 +92,7 @@
     text-align: center;
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4, h5, h6 {
     font-weight: 700;
 }
 
@@ -139,4 +143,12 @@ p {
 .iconInsideCircle img {
     width: 25px;
     height: 25px;
+}
+
+.danger-text {
+    color: $red;
+}
+
+.darkBlue {
+    color: $veryDarkBlue;
 }
