--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -25,3 +25,34 @@ svg {
 .socilIcons img {
     margin: 0px 10px;
 }
+
+
+@media (min-width: 760px) {
+    footer {
+        text-align: left;
+    }
+
+    .row {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+    }
+
+    .container {
+        padding: 20px 50px;
+    }
+
+    .footer-links {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .footer-links > div {
+        padding: 0px 10px;
+    }
+
+    ul li { 
+        margin-bottom: 5px;
+    }
+        
+}
