--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,22 @@
 <header>
-    <div class="logo">
-        <img src="../../../assets/images/logo.svg">
+    <div class="row">
+        <div class="logo">
+            <img src="../../../assets/images/logo.svg">
+        </div>
+        <div class="leftSideNav">
+            <ul class="row">
+                <li><a >Features</a></li>
+                <li><a >Pricing</a></li>
+                <li><a >Resources</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="rightSideNav">
+        <ul class="row">
+            <li><a>Login</a></li>
+            <li><a class="btn btn-secondary">Sign Up</a></li>
+        </ul>
     </div>
 
     <div class="menuBtn">
