--- a/src/styles.scss
+++ b/src/styles.scss
@@ -152,3 +152,16 @@ p {
 .darkBlue {
     color: $veryDarkBlue;
 }
+
+
+
+@media (min-width: 760px) {
+    
+    .col-md-4 {
+        width: 25%;
+      }
+  
+    .col-md-8 {
+        width: 75%;
+    }
+}
