--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,7 +5,7 @@
             <div class="order2">
                 <img src="../../../assets/images/illustration-working.svg">
             </div>
-            <div class="text-center marginTop-2 order1">
+            <div class="marginTop-2 order1">
                 <h1 class="darkBlue">More than just shorter links</h1>
                 <p class="marginTop-1">Build your brand's recognition and get detailed insights on how your links are performing.</p>
                 <button class="btn btn-secondary marginTop-1">Get Started</button>
@@ -14,34 +14,34 @@
     </div>
 </section>
 
-
-<section class="formSection">
-    <form [formGroup]="myForm" (ngSubmit)="onSubmit(myForm)">
-        <div class="row">
-            <div class="marginBottom-1 col-md-8">
-                <mat-form-field  floatLabel="never" >
-                    <input autocomplete="off" matInput formControlName="url" placeholder="Shorten a link here...">
-                </mat-form-field>
-                <div *ngIf="submitedForm && myForm.get('url')?.hasError('required')">
-                    <i class="danger-text">{{ inputErrorMessage }}</i>
-                  </div>
-            </div>
-            <div class="col-md-4">
-                <button class="btn btn-primary text-center">Shorten It!</button>
-            </div>
-        </div>
-    </form>
-</section>
-
 <!-- feature section start -->
 <section class="marginTop-3 paddingTop-9 features">
+
+    <section class="formSection">
+        <form [formGroup]="myForm" (ngSubmit)="onSubmit(myForm)">
+            <div class="row">
+                <div class="marginBottom-1 col-md-8">
+                    <mat-form-field  floatLabel="never" >
+                        <input autocomplete="off" matInput formControlName="url" placeholder="Shorten a link here...">
+                    </mat-form-field>
+                    <div *ngIf="submitedForm && myForm.get('url')?.hasError('required')">
+                        <i class="danger-text">{{ inputErrorMessage }}</i>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <button class="btn btn-primary text-center">Shorten It!</button>
+                </div>
+            </div>
+        </form>
+    </section>
+
     <div class="shortenCardsContainer">
         <div *ngFor="let link of arrayOfShortenUrls">
             <div class="shortenCard row space-between alignCenter">
                 <div class="">
                     <p class="originalLink">{{ link.result.original_link }}</p>
                 </div>
-                <div class="row alignCenter">
+                <div class="row">
                     <p class="shortenLink">{{ link.result.full_short_link2 }}</p>
                     <button class="btn-copy {{ link.result.code }}" (click)="copyShortenLink(link.result)">Copy</button>
                 </div>
@@ -53,31 +53,37 @@
         <p class="marginTop-1">Track how your links are performing across the web with our advanced statistics dashboard.</p>
     </div>
 
-    <div class="flexColumn alignCenter">
+    <div class="flexColumn marginTop-3 alignCenter">
         <div class="card">
             <div class="iconInsideCircle">
                 <img src="../../../assets/images/icon-brand-recognition.svg">
             </div>
-            <h3 class="darkBlue">Brand Recognition</h3>
-            <p class="marginTop-1">Boost your brand recognition with each click. Generic links don't mean a thing. Branded links help instill confidence in your content.</p>
+            <div class="marginTop-2">
+                <h3 class="darkBlue">Brand Recognition</h3>
+                <p class="marginTop-1">Boost your brand recognition with each click. Generic links don't mean a thing. Branded links help instill confidence in your content.</p>
+            </div>
         </div>
 
         <div class="card">
             <div class="iconInsideCircle">
                 <img src="../../../assets/images/icon-detailed-records.svg">
             </div>
-            <h3 class="darkBlue">Detailed Records</h3>
-            <p class="marginTop-1">Gain insights into who is clicking your links. Knowing when and where people engage with your content helps inform better decisions.</p>
+            <div class="marginTop-2">
+                <h3 class="darkBlue">Detailed Records</h3>
+                <p class="marginTop-1">Gain insights into who is clicking your links. Knowing when and where people engage with your content helps inform better decisions.</p>
+            </div>
         </div>
 
         <div class="card">
             <div class="iconInsideCircle">
                 <img src="../../../assets/images/icon-fully-customizable.svg">
             </div>
-            <h3 class="darkBlue">Fully Customizable</h3>
-            <p class="marginTop-1">Imporve brand awareness and content discoverability through customizable links, supercharging audience engagement.</p>
+            <div class="marginTop-2">
+                <h3 class="darkBlue">Fully Customizable</h3>
+                <p class="marginTop-1">Imporve brand awareness and content discoverability through customizable links, supercharging audience engagement.</p>
+        
+            </div>
         </div>
-
     </div>
 </section>
 <!-- feature section end -->
