done for lg device

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -70,3 +70,9 @@ header ul li {
         display: flex;
     }
 }
+
+@media (min-width: 1200px) {
+    header {
+        padding: 50px 80px;
+    }   
+}
