--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -53,12 +53,12 @@
         <p class="marginTop-1">Track how your links are performing across the web with our advanced statistics dashboard.</p>
     </div>
 
-    <div class="flexColumn marginTop-3 alignCenter">
+    <div class="featureCards alignCenter">
         <div class="card">
             <div class="iconInsideCircle">
                 <img src="../../../assets/images/icon-brand-recognition.svg">
             </div>
-            <div class="marginTop-2">
+            <div class="featureDescription">
                 <h3 class="darkBlue">Brand Recognition</h3>
                 <p class="marginTop-1">Boost your brand recognition with each click. Generic links don't mean a thing. Branded links help instill confidence in your content.</p>
             </div>
@@ -68,7 +68,7 @@
             <div class="iconInsideCircle">
                 <img src="../../../assets/images/icon-detailed-records.svg">
             </div>
-            <div class="marginTop-2">
+            <div class="featureDescription">
                 <h3 class="darkBlue">Detailed Records</h3>
                 <p class="marginTop-1">Gain insights into who is clicking your links. Knowing when and where people engage with your content helps inform better decisions.</p>
             </div>
@@ -78,7 +78,7 @@
             <div class="iconInsideCircle">
                 <img src="../../../assets/images/icon-fully-customizable.svg">
             </div>
-            <div class="marginTop-2">
+            <div class="featureDescription">
                 <h3 class="darkBlue">Fully Customizable</h3>
                 <p class="marginTop-1">Imporve brand awareness and content discoverability through customizable links, supercharging audience engagement.</p>
         
