--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -38,7 +38,7 @@ svg {
         align-items: flex-start;
     }
 
-    .container {
+    footer {
         padding: 20px 50px;
     }
 
@@ -55,4 +55,10 @@ svg {
         margin-bottom: 5px;
     }
         
+}
+
+@media (min-width: 1200px) {
+    footer {
+        padding: 20px 80px;
+    }
 }
