--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -9,28 +9,28 @@
                 <div class="marginTop-3">
                     <h4>Features</h4>
                     <ul class="marginTop-1">
-                        <li>Link Shortening</li>
-                        <li>Branded Links</li>
-                        <li>Analytics</li>
+                        <li><a>Link Shortening</a></li>
+                        <li><a>Branded Links</a></li>
+                        <li><a>Analytics</a></li>
                     </ul>
                 </div>
     
                 <div class="marginTop-3">
                     <h4>Resource</h4>
                     <ul class="marginTop-1">
-                        <li>Blog</li>
-                        <li>Developers</li>
-                        <li>Support</li>
+                        <li><a>Blog</a></li>
+                        <li><a>Developers</a></li>
+                        <li><a>Support</a></li>
                     </ul>
                 </div>
     
                 <div class="marginTop-3">
                     <h4>Company</h4>
                     <ul class="marginTop-1">
-                        <li>About</li>
-                        <li>Our Team</li>
-                        <li>Careers</li>
-                        <li>Contact</li>
+                        <li><a>About</a></li>
+                        <li><a>Our Team</a></li>
+                        <li><a>Careers</a></li>
+                        <li><a>Contact</a></li>
                     </ul>
                 </div>
     
