--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-
+<!-- hero section -->
 <section class="marginTop-1 marginBottom-7 heroSection">
     <div class="container">
         <div class="row">
@@ -48,11 +48,13 @@
             </div>
         </div>
     </div>
+
     <div class="text-center">
         <h2 class="darkBlue">Advanced Statistics</h2>
         <p class="marginTop-1">Track how your links are performing across the web with our advanced statistics dashboard.</p>
     </div>
 
+    <!-- features card start -->
     <div class="featureCards alignCenter">
         <div class="card">
             <div class="iconInsideCircle">
@@ -84,6 +86,7 @@
         
             </div>
         </div>
+        <!-- features card end-->
     </div>
 </section>
 <!-- feature section end -->
