--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,10 +4,14 @@
 
 * {
     font-family: 'Poppins', sans-serif;
-    font-size: 16px;
+    font-size: 12px;
     margin: 0px;
     padding: 0px;
     font-weight: 500;
+}
+
+button, li a {
+    cursor: pointer;
 }
 
 .full-width {
@@ -143,6 +147,10 @@ p {
 
 
 @media (min-width: 760px) {
+
+    * {
+        font-size: 14px;
+    }
     
     .col-md-4 {
         width: 25%;
@@ -150,5 +158,35 @@ p {
   
     .col-md-8 {
         width: 75%;
+    }
+
+    h1 {
+        font-size: 2.5rem;
+    }
+    
+    h2 {
+        font-size: 1.5rem;
+    }
+    
+    h3 {
+        font-size: 1.3rem;
+    }
+}
+
+@media (min-width: 1200px) {
+    * {
+        font-size: 16px;
+    }
+
+    h1 {
+        font-size: 3rem;
+    }
+    
+    h2 {
+        font-size: 2rem;
+    }
+    
+    h3 {
+        font-size: 1.5rem;
     }
 }
